frontend/index.css
html {
  overflow-y: scroll;
}

#algolia-tools .navbar {
  background: #0B1623;
}

#algolia-tools h1 {
  font-weight: 300;
  font-size: 3em;
  font-family: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
}

#algolia-tools h2 {
  font-weight: 600;
  font-size: 1.8em;
  font-family: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
}

#algolia-tools .btn {
  box-shadow: none;
  border: none;
  text-shadow: none;
  text-transform: uppercase;
  font-size: 1.1em;
}

#algolia-tools .btn.btn-primary {
  box-shadow: none;
  border: solid 2px #4CAFD8;
  color: #4CAFD8;
  background: transparent;
}

#algolia-tools .btn.btn-default {
  box-shadow: none;
  color: #444;
  background: #ccc;
  font-size: 1em;
}

#algolia-tools .alert {
  background: transparent;
  box-shadow: none;
  border-width: 2px;
}

.page {
  display: none;
}

.vertical-align {
  display: flex;
  align-items: center;
}

#out {
  height: 400px;
  overflow-y: scroll;
}

.progress {
  height: 40px;
}

.progress .progress-bar {
  line-height: 40px;
  font-size: 1.2em;
}

.progress span, .progress img {
  vertical-align: middle;
}

#advanced-options-form {
  margin-top: 1em;
}

.container .copy-failed {
  font-size: 0.9em;
}

textarea#out {
  width: 100%;
}

/* faster collapsing */
.collapsing {
  -webkit-transition-duration: .20s;
       -o-transition-duration: .20s;
          transition-duration: .20s;
}

#algolia-tools .navbar {
  height: 62px;
  padding: 0 15px;
  line-height: 62px;
  display: flex;
  align-items: center;
  justify-content: center;
}

#algolia-tools a[href="https://github.com/algolia/diag"]:hover,
#algolia-tools a[href="https://github.com/algolia/diag"]:active {
  background: transparent;
}

.results {
  padding-top: .5em;
  margin-bottom: 1.5em;
}

.results h2, .results p {
  margin: 0;
  padding: 0;
}

.results p {
  position: relative;
  /* omfg css fix */
  top: 10px;
}

/* Sticky footer styles
-------------------------------------------------- */
/* http://getbootstrap.com/examples/sticky-footer/sticky-footer.css*/
html {
  position: relative;
  min-height: 100%;
}
body {
  /* Margin bottom by footer height */
  margin-bottom: 40px;
}
.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
  height: 40px;
}

.footer p {
  width: 10%;
  border-top: 2px solid #4CAFD8;
  margin: 0 auto;
  line-height: 40px;
}

